--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   font-family: sans-serif;
-}
+} */
 
 a {
   text-decoration: none;
@@ -10,12 +10,869 @@ label {
   display: block;
 }
 
-nav a {
+/* nav a {
   display: inline-block;
   margin: 1em;
-}
+} */
 
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+.app-cont {
+  display: flex;
+}
+
+.routes-cont {
+  display: flex;
+  margin-top: 4em;
+  background-color: rgb(239, 239, 239);
+}
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+}
+
+.home-container h3 {
+  text-align: center;
+}
+
+/* -----------SIDEBAR COMPONENT--------------------- */
+
+.sidebar-container {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  min-width: 150px;
+  max-width: 150px;
+  min-height: 100vh;
+  height: auto;
+  box-shadow: 4px 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  background: linear-gradient(#94b5e3, rgb(37, 89, 156));
+}
+
+.sidebar-nav-cont {
+  position: fixed;
+  max-width: 150px;
+}
+
+.rev-time-div {
+  height: 300px;
+  width: 40vw;
+  margin: 1em;
+  background-color: #94b5e3;
+}
+
+.welcome-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* ------SUMMARY-------- */
+.summary-page-container {
+  margin-left: 150px;
+}
+
+.summary-data {
+  display: flex;
+}
+
+/* -------------CHART ARRANGEMENT----- */
+.peak-time-div {
+  min-height: 300px;
+  min-width: 450px;
+  width: 550px;
+  margin: 1em;
+}
+
+.chart-header {
+  display: flex;
+}
+
+.bus-charts-cont {
+  margin-left: 150px;
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+/* ------CALENDAR CONTAINER ---------- */
+.calendar-container {
+  display: flex;
+  max-width: 90vw;
+  padding: 1em;
+  background-color: rgb(239, 239, 239);
+}
+
+.calendar-itself {
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.calendar-stats-cont {
+  display: flex;
+  margin-left: 2em;
+  height: 100%;
+}
+
+.waiters-list {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  width: 25vw;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.waiters-list h2 {
+  color: #767c83;
+  margin: 0;
+  padding: 0.5em;
+  text-align: center;
+}
+
+.waiters-list-li {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  list-style-type: none;
+  margin: 0;
+  padding: 5px;
+}
+
+.waiters-list-li li {
+  width: 120px;
+  padding: 0.15em;
+}
+
+.dish-rev {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5px;
+  padding-top: 10px;
+  margin-left: 2em;
+  align-items: center;
+  width: 30vw;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.dish-rev h1 {
+  color: #767c83;
+  margin: 0.5em;
+  text-align: center;
+}
+
+.dish-rev h2 {
+  color: #767c83;
+  text-align: center;
+  margin: 0.5em;
+  /* text-align: center; */
+}
+
+.dish-rev span {
+  color: #767c83;
+}
+
+/* ---------custom analytics--------- */
+.custom-analytics-container {
+  display: flex;
+  flex-direction: column;
+  background-color: #f8f8f8;
+  padding: 1em;
+  padding-bottom: 0;
+  /* width: 100%; */
+  /* max-width: 100%; */
+  /* min-height: 100vh; */
+}
+
+.custom-analytics-container h3 {
+  margin-bottom: 0.7em;
+}
+
+.row-query {
+  display: flex;
+  /* min-width: 800px; */
+  padding-bottom: 1em;
+  border-bottom: 4px solid #94b5e3;
+}
+
+.int-between {
+  display: flex;
+}
+
+.int-between h4 {
+  margin: 0 0.5em;
+  align-self: center;
+}
+
+.row-query button {
+}
+
+.row-columns {
+  display: flex;
+  flex-direction: column;
+  /* margin: 0 1em 1em 1em; */
+}
+
+.select-where {
+  display: flex;
+  margin-bottom: 1em;
+}
+
+.where-top-cont {
+  /* width: 100%;
+  border: 2px solid black */
+}
+
+.col-cont {
+  /* background-color: rgb(110, 110, 179); */
+  min-width: 150px;
+  display: flex;
+}
+
+.where-cont {
+  /* margin-left: 30px; */
+  min-width: 250px;
+  /* max-width: 800px; */
+  /* background-color: rgb(179, 179, 223); */
+}
+
+.input-field-custom {
+  display: flex;
+  margin-left: 20px;
+}
+
+.integer-top {
+  display: flex;
+  flex-direction: column;
+}
+
+.integer-input {
+  display: flex;
+  text-align: center;
+  font-size: 16px;
+  height: 38px;
+}
+
+.integer-input input {
+  width: 80px;
+}
+
+.select-table-name {
+  /* background-color: rgb(73, 73, 143); */
+  margin-right: 30px;
+  max-width: 200px;
+  min-width: 200px;
+}
+
+.select-cust {
+  width: 150px;
+  font-size: 14px;
+  height: 38px;
+}
+
+/* .integer-input {
+  width: 145px;
+  font-size: 14px;
+
+} */
+
+.sel-criteria {
+  margin-right: 30px;
+  min-width: 170px;
+  max-width: 170px;
+}
+
+.math-int {
+  min-width: 230px;
+  margin-right: 30px;
+}
+
+.clear-btn {
+  align-self: flex-start;
+  margin-left: 16px;
+  margin-bottom: 1em;
+  /* margin-top: 2em; */
+  height: 30px;
+  width: 160px;
+  text-align: center;
+  font-size: 14px;
+  background-color: #94b5e3;
+  border-radius: 5px;
+  border-color: #aaa;
+}
+
+.clear-btn:hover {
+  background-color: #24497a;
+  color: white;
+}
+
+.remove-add {
+  display: flex;
+  justify-content: center;
+}
+
+.remove-add button {
+  width: 160px;
+  height: 30px;
+  margin: 1em;
+  font-size: 14px;
+  border-radius: 5px;
+  border-color: #aaa;
+}
+
+.remove-add button:hover {
+  background: #e7e7e7;
+}
+
+/* --------select--------- */
+.select-css {
+  display: block;
+  font-size: 10px;
+  font-family: sans-serif;
+  font-weight: 500;
+  color: rgb(0, 0, 0);
+  line-height: 1.1;
+  padding: 0.6em 1.4em 0.5em 0.8em;
+  width: 8em;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right 0.7em top 50%, 0 0;
+  background-size: 0.65em auto, 100%;
+}
+
+/* -----BUTTON------- */
+
+.button1 {
+  /* display: inline-block; */
+  margin-left: 0.3em;
+  border-radius: 0.15em;
+  /* box-sizing: border-box; */
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  color: #ffffff;
+  background-color: #24497a;
+  box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
+  text-align: center;
+  position: relative;
+  width: 8em;
+}
+
+.button1:active {
+  top: 0.1em;
+}
+
+@media all and (max-width: 30em) {
+  .button1 {
+    display: block;
+    margin: 0.4em auto;
+  }
+}
+
+.month-button::-ms-expand {
+  display: none;
+}
+
+.month-button:hover {
+  border-color: #888;
+}
+
+.month-button:focus {
+  border-color: #aaa;
+  box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  color: #222;
+  outline: none;
+}
+
+.month-button option {
+  font-weight: normal;
+}
+
+.month-button {
+  display: flex;
+}
+
+/* ----------------CALENDAR----------------- */
+.react-calendar {
+  width: 350px;
+  max-width: 100%;
+  background: white;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.125em;
+}
+
+.react-calendar,
+.react-calendar *,
+.react-calendar *:before,
+.react-calendar *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.react-calendar button {
+  margin: 0;
+  border: 0;
+  outline: none;
+}
+
+.react-calendar button:enabled:hover {
+  cursor: pointer;
+}
+
+.react-calendar__navigation {
+  height: 44px;
+  margin-bottom: 1em;
+}
+
+.react-calendar__navigation button {
+  min-width: 44px;
+  background: none;
+}
+
+.react-calendar__navigation button:enabled:hover,
+.react-calendar__navigation button:enabled:focus {
+  background-color: #24497a;
+  color: white;
+}
+
+.react-calendar__navigation button[disabled] {
+  background-color: #f0f0f0;
+}
+
+.react-calendar__month-view__weekdays {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.75em;
+}
+
+.react-calendar__month-view__weekdays__weekday {
+  padding: 0.5em;
+}
+
+.react-calendar__month-view__weekNumbers {
+  font-weight: bold;
+}
+
+.react-calendar__month-view__weekNumbers .react-calendar__tile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.75em;
+  padding: calc(0.75em / 0.75) calc(0.5em / 0.75);
+}
+
+.react-calendar__month-view__days__day--weekend {
+  color: #d10000;
+}
+
+.react-calendar__month-view__days__day--neighboringMonth {
+  color: #757575;
+}
+
+.react-calendar__year-view .react-calendar__tile,
+.react-calendar__decade-view .react-calendar__tile,
+.react-calendar__century-view .react-calendar__tile {
+  padding: 2em 0.5em;
+}
+
+.react-calendar__tile {
+  max-width: 100%;
+  text-align: center;
+  padding: 0.75em 0.5em;
+  background: none;
+}
+
+.react-calendar__tile:disabled {
+  background-color: #f0f0f0;
+}
+
+.react-calendar__tile:enabled:hover,
+.react-calendar__tile:enabled:focus {
+  background-color: #e6e6e6;
+}
+
+.react-calendar__tile--hasActive {
+  background: #24497a;
+}
+
+.react-calendar__tile--hasActive:enabled:hover,
+.react-calendar__tile--hasActive:enabled:focus {
+  background: #24497a;
+}
+
+.react-calendar__tile--active {
+  background: #24497a;
+  color: white;
+}
+
+.react-calendar__tile--active:enabled:hover,
+.react-calendar__tile--active:enabled:focus {
+  background: #24497a;
+}
+
+.react-calendar--selectRange .react-calendar__tile--hover {
+  background-color: #e6e6e6;
+}
+
+/* ------CARD CONTAINER ---------- */
+.card-container {
+  display: flex;
+  justify-content: center;
+  max-width: 90vw;
+  margin-left: 1em;
+  padding: 1em;
+  background-color: rgb(239, 239, 239);
+}
+
+/* ------SUMMARY PAGE CHART CONTAINER ---------- */
+.summary-chart-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 90vw;
+  margin-left: 1em;
+  padding: 1em;
+  background-color: rgb(239, 239, 239);
+}
+
+/* ------SUMMARY TABLE CONTAINER ---------- */
+.summary-table-container {
+  display: flex;
+  justify-content: center;
+  max-width: 90vw;
+  margin-left: 1em;
+  padding: 1em;
+  background-color: rgb(239, 239, 239);
+}
+
+/* -----------WELCOME PAGE ------------- */
+@import url('https://fonts.googleapis.com/css?family=Exo:400,700');
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  font-family: 'Exo', sans-serif;
+}
+
+.context {
+  width: 100%;
+  top: 20vh;
+  position: absolute;
+  z-index: 1;
+}
+
+.context h1,
+.context h2 {
+  text-align: center;
+  color: #fff;
+  font-size: 50px;
+}
+
+.area {
+  background: #4e54c8;
+  background: -webkit-linear-gradient(#3164a7, #94b5e3);
+  width: 100%;
+  height: 100vh;
+}
+
+.circles {
+  position: absolute;
+  top: 1;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(0, 21, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+
+.circles li:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5) {
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7) {
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8) {
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9) {
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10) {
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}
+
+/* -----------CUSTOMIZED QUERY ------------- */
+
+.customized-query-container {
+  margin-left: 150px;
+  min-height: 100vh;
+  min-width: 600px;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  /* background-color: tomato; */
+}
+
+.query-cont {
+  display: flex;
+  flex-direction: column;
+  /* background-color: teal; */
+  align-items: center;
+  margin: 10px 70px;
+  /* width: 100vw - 140px; */
+}
+
+.query-table {
+  /* margin-left: 150px; */
+  /* padding: 2em; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* margin: 2em; */
+  /* min-width: 600px; */
+  /* width: 100vw; */
+  width: 100%;
+  max-width: 100%;
+  background-color: #f8f8f8;
+  box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+}
+
+.submit-query-btn {
+  margin: 1em 0;
+  /* padding: 0.5em; */
+  text-align: center;
+  border-radius: 5px;
+}
+
+.submit-query-btn button {
+  height: 40px;
+  width: 150px;
+  padding: 0.5em;
+  background-color: #94b5e3;
+
+  box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  border-color: #aaa;
+}
+.submit-query-btn button:hover {
+  background-color: #24497a;
+  color: white;
+}
+
+.combine-btn {
+  /* background-color: yellow; */
+  /* width: 100vw; */
+  margin: 1em 0 1em 32px;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.combine-btn button {
+  text-align: center;
+  width: 160px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.combine-btn button:hover {
+  background: #e7e7e7;
+}
+
+.query-table-cont {
+  width: 100%;
+  max-width: 100%;
+}
+
+.submit-query {
+  width: 100%;
+  max-width: 100%;
+}
+
+/* --------------TABLE RESULTS---------------- */
+.table-wrapper {
+  margin: 10px 70px 20px;
+  box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+}
+
+.fl-table {
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: normal;
+  border: none;
+  border-collapse: collapse;
+  width: 100%;
+  /* min-width: 100vw - 140px; */
+  max-width: 100%;
+  white-space: nowrap;
+  background-color: white;
+}
+
+.fl-table td,
+.fl-table th {
+  text-align: center;
+  padding: 8px;
+}
+
+.fl-table td {
+  border-right: 1px solid #f8f8f8;
+  font-size: 12px;
+}
+
+.fl-table thead th {
+  color: #ffffff;
+  background: #206491;
+}
+
+.fl-table thead th:nth-child(odd) {
+  color: #ffffff;
+  background: #24497a;
+}
+
+.fl-table tr:nth-child(even) {
+  background: #d2dae6;
+}
+
+/* Responsive */
+
+.table-results-cont {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-content: flex-start;
+}
+
+.download-btn {
+  padding: 0.5em;
+  align-self: center;
+  background-color: #94b5e3;
+  box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+  border-radius: 5px;
+}
+
+.download-btn.a {
+  text-decoration: none;
+}
+
+.makeStyles-item-244 {
+  width: 150px !important;
 }
