--- a/public/style.css
+++ b/public/style.css
@@ -555,6 +555,15 @@ form div {
   background-color: rgb(239, 239, 239);
 }
 
+/* ------TOTAL SCORE CARD CONTAINER ---------- */
+.totalscore-card-container {
+  display: flex;
+  max-width: 90vw;
+  margin-left: 1em;
+  padding: 1em;
+  background-color: rgb(239, 239, 239);
+}
+
 /* ------SUMMARY PAGE CHART CONTAINER ---------- */
 .summary-chart-container {
   display: flex;
