--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,9 @@ label {
   margin: 1em;
 } */
 
+body {
+  display: flex;
+}
 form div {
   margin: 1em;
   display: inline-block;
@@ -40,14 +43,21 @@ form div {
   text-align: center;
 }
 
+/*---------NAV BAR---------*/
+/* img {
+  width: 400px;
+  height: 50px;
+} */
+
 /* -----------SIDEBAR COMPONENT--------------------- */
 
 .sidebar-container {
-  position: fixed;
+  /* position: fixed; */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  min-width: 150px;
+  align-items: center;
+  min-width: 200px;
   /* max-width: 150px; */
   min-height: 100vh;
   height: auto;
@@ -76,7 +86,13 @@ form div {
 
 /* ------SUMMARY-------- */
 .summary-page-container {
-  margin-left: 150px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: space-between;
+  justify-content: space-between;
+  width: 100%;
+  /* margin-left: 150px; */
 }
 
 .summary-data {
