--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ label {
 } */
 
 body {
-  display: flex;
+  /* display: flex; */
 }
 form div {
   margin: 1em;
@@ -86,10 +86,10 @@ form div {
 
 /* ------SUMMARY-------- */
 .summary-page-container {
-  display: flex;
+  /* display: flex; */
   flex-wrap: wrap;
   flex-direction: column;
-  align-items: space-between;
+  /* align-items: space-between; */
   justify-content: space-between;
   width: 100%;
   /* margin-left: 150px; */
