--- a/public/style.css
+++ b/public/style.css
@@ -576,7 +576,7 @@ form div {
 .exam-history-card-container {
   display: flex;
   justify-content: space-between;
-  max-width: 75%;
+  max-width: 1280px;
   margin-left: 1em;
   padding: 1em;
   /* background-color: rgb(239, 239, 239); */
